--- a/public/assets/css/brand.css
+++ b/public/assets/css/brand.css
@@ -5,6 +5,7 @@
   --brand-soft: #fafaff;
   --brand-gray: #5b4d4d;
   --brand-navy-shadow: #2f3b6982;
+  --brand-shadow: 0px 4px 4px var(--brand-navy-shadow);
 }
 
 h1, h2, h3, h4, h5, h6, p, div {
