--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 header {
   height: 130px;
   background-color: var(--brand-soft);
-  box-shadow: 0px 4px 4px var(--brand-navy-shadow);
+  box-shadow: var(--brand-shadow);
   position: fixed;
   top: 0;
   left: 0;
@@ -47,7 +47,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  box-shadow: 0px 4px 4px var(--brand-navy-shadow);
+  box-shadow: var(--brand-shadow)
 }
 
 .card-left, .card-right {
@@ -113,6 +113,7 @@ main {
   .card-holder {
     flex-direction: column;
   }
+
   .card-right {
     width: 100%;
     min-height: 50px;
@@ -122,10 +123,12 @@ main {
     padding-left: 20px;
     align-items: center;
   }
+
   .card-right h4 {
     font-size: 16px;
     margin-top: 10px;
   }
+  
   main, .header-contents {
     width: 80%;
     margin-left: 10%;
