active card color and added brand color

--- a/public/assets/css/brand.css
+++ b/public/assets/css/brand.css
@@ -2,6 +2,7 @@
   --brand-navy: #2f3b69;
   --brand-beige: #e3dedd;
   --brand-teal: #3e829a;
+  --brand-teal-light: #3e829a69;
   --brand-soft: #fafaff;
   --brand-gray: #5b4d4d;
   --brand-navy-shadow: #2f3b6982;
