--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -57,10 +57,10 @@ main {
   width: 100%;
   justify-content: flex-end;
   box-shadow: var(--brand-shadow);
+  border: 1px solid var(--brand-navy);
 }
 
 .card-left, .card-right {
-  border: 1px solid var(--brand-navy);
   padding: 0;
   min-height: 185px;
 }
@@ -70,6 +70,7 @@ main {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  border-right: 1px solid var(--brand-navy);
 }
 
 .card-left h3 {
@@ -115,13 +116,18 @@ main {
 
   .card-holder {
     flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .card-left {
+    width: 100%;
+    border-right: none;
   }
 
   .card-right {
     width: 100%;
     min-height: 50px;
-    border: 1px solid var(--brand-navy);
-    border-top: none;
+    border-top: 1px solid var(--brand-navy);
     justify-content: flex-start;
     padding-left: 20px;
   }
@@ -136,6 +142,14 @@ main {
     margin-left: 10%;
     margin-right: 10%;
   }
+}
+
+.card-holder:hover {
+  background-color: var(--brand-soft);
+}
+
+.card-holder:active {
+  background-color: var(--brand-teal-light);
 }
 
 @media screen and (max-width: 700px){
