--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,16 @@
-<h1>Homepage</h1>
-{{#each blogs as |blog|}}      
-      <!-- BLOG CARD -->
-      <div class="card-holder">
-        <div class="card-left">
-          <div class="title-container">
-            <h3 class="title">{{blog.title}}</h3>
-          </div>
-          <div class="date-container">
-            <div>{{blog.date}}</div>
-          </div>
+{{#each posts}}      
+    <!-- BLOG CARD -->
+    <div class="card-holder">
+      <div class="card-left">
+        <div class="title-container">
+          <h3 class="title">{{title}}</h3>
         </div>
-        <div class="card-right">
-          <h4>{{blog.}}</h4>
+        <div class="date-container">
+          <div>{{date_created}}</div>
         </div>
       </div>
+      <div class="card-right">
+        <h4>{{user.username}}</h4>
+      </div>
+    </div>
 {{/each}}
