--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,57 +39,9 @@
   
   <main>
       <h1>Homepage</h1>
-      
-      <!-- BLOG CARD -->
-      <div class="card-holder">
-        <div class="card-left">
-          <div class="title-container">
-            <h3 class="title">Why I still use Bootstrap in 2023</h3>
-          </div>
-          <div class="date-container">
-            <div>July 15, 2023</div>
-          </div>
-        </div>
-        <div class="card-right">
-          <h4>CSSDesigner_02</h4>
-        </div>
-      </div>
 
-      <!-- BLOG CARD -->
-      <div class="card-holder">
-        <div class="card-left">
-          <div class="title-container">
-            <h3 class="title">The most UNDERrated node.js packages</h3>
-          </div>
-          <div class="date-container">
-            <div>July 12, 2023</div>
-          </div>
-        </div>
-        <div class="card-right">
-          <h4>LineBack(end)er</h4>
-        </div>
-      </div>
+        {{{ body }}}
 
-      <!-- BLOG CARD -->
-      <div class="card-holder">
-        <div class="card-left">
-          <div class="title-container">
-            <h3 class="title">Responsive layouts, responsive servers, and responsive forms: get better responses</h3>
-          </div>
-          <div class="date-container">
-            <div>July 11, 2023</div>
-          </div>
-        </div>
-        <div class="card-right">
-          <h4>IknowaLOT</h4>
-        </div>
-      </div>
-
-
-
-
-
-    </div>
   </main>
 
   <footer>
