--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/3afd0f9cd5.js" crossorigin="anonymous"></script>
+
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -30,9 +33,9 @@
       </div>
 
       <nav>
-        <img src="https://placehold.co/50" width="50px" height="50px"/>
-        <img src="https://placehold.co/50" width="50px" height="50px"/>
-        <img src="https://placehold.co/50" width="50px" height="50px"/>
+        <i class="fa-solid fa-house fa-2xl nav-icon"></i>
+        <i class="fa-solid fa-user fa-2xl nav-icon"></i>
+        <i class="fa-solid fa-right-to-bracket fa-2xl nav-icon"></i>
       </nav>
     </div>
   </header>
