--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -156,12 +156,37 @@ main {
   }
 }
 
-.card-holder:hover {
+.home-card:hover {
   background-color: var(--brand-soft);
 }
 
-.card-holder:active {
+.home-card:active {
   background-color: var(--brand-teal-light);
+}
+
+.card-right {
+  flex-direction: column;
+  justify-content: space-evenly;
+
+}
+
+button {
+  background-color: var(--brand-soft);
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.dashboard-button {
+  width: 90%;
+  height: 70px;
+}
+
+.dashboard-button:hover {
+  background-color: white;
+}
+
+.dashboard-button:active {
+  background-color: white;
 }
 
 @media screen and (max-width: 700px){
