--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,3 +15,67 @@
       </div>
     </div>
 {{/each}}
+
+
+
+<div id="login-modal" class="modal">
+  <div class="modal-background"></div>
+
+  <div class="modal-content">
+    <div class="box">
+      <h3>Log In</h3>
+      <form>
+        <div class="field">
+          <label class="label">Username</label>
+          <div class="control has-icons-left">
+            <input class="input" type="text" placeholder="username">
+            <span class="icon is-small is-left">
+              <i class="fas fa-user"></i>
+            </span>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Password</label>
+          <div class="control has-icons-left">
+            <input class="input" type="password" placeholder="password">
+            <span class="icon is-small is-left">
+              <i class="fas fa-lock"></i>
+            </span>
+          </div>
+        </div>
+
+        <button class="form-button">Log In</button>
+      </form>
+    </div>
+
+    <div class="box">
+      <h3>Sign Up</h3>
+      <form>
+        <div class="field">
+          <label class="label">Create Username</label>
+          <div class="control has-icons-left">
+            <input class="input" type="text" placeholder="create username">
+            <span class="icon is-small is-left">
+              <i class="fas fa-user"></i>
+            </span>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Create Password</label>
+          <div class="control has-icons-left">
+            <input class="input" type="password" placeholder="create password">
+            <span class="icon is-small is-left">
+              <i class="fas fa-lock"></i>
+            </span>
+          </div>
+        </div>
+
+        <button class="form-button">Sign Up</button>
+      </form>
+    </div>
+  </div>
+
+  <button class="modal-close is-large" aria-label="close"></button>
+</div>
