signup form feature

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -28,7 +28,7 @@
         <div class="field">
           <label class="label">Username</label>
           <div class="control has-icons-left">
-            <input class="input" type="text" placeholder="username">
+            <input class="input" id="login-username" type="text" placeholder="username">
             <span class="icon is-small is-left">
               <i class="fas fa-user"></i>
             </span>
@@ -38,14 +38,14 @@
         <div class="field">
           <label class="label">Password</label>
           <div class="control has-icons-left">
-            <input class="input" type="password" placeholder="password">
+            <input class="input" id="login-password" type="password" placeholder="password">
             <span class="icon is-small is-left">
               <i class="fas fa-lock"></i>
             </span>
           </div>
         </div>
 
-        <button class="form-button">Log In</button>
+        <button class="form-button" id="login-button">Log In</button>
       </form>
     </div>
 
@@ -55,7 +55,7 @@
         <div class="field">
           <label class="label">Create Username</label>
           <div class="control has-icons-left">
-            <input class="input" type="text" placeholder="create username">
+            <input class="input" type="text" id="signup-username" placeholder="create username">
             <span class="icon is-small is-left">
               <i class="fas fa-user"></i>
             </span>
@@ -65,14 +65,14 @@
         <div class="field">
           <label class="label">Create Password</label>
           <div class="control has-icons-left">
-            <input class="input" type="password" placeholder="create password">
+            <input class="input" type="password" id="signup-password" placeholder="create password">
             <span class="icon is-small is-left">
               <i class="fas fa-lock"></i>
             </span>
           </div>
         </div>
 
-        <button class="form-button">Sign Up</button>
+        <button class="form-button" id="signup-button">Sign Up</button>
       </form>
     </div>
   </div>
