--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,53 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+ <div class="form-wrapper">
+  <h3>Log In</h3>
+    <form>
+      <div class="field">
+        <label class="label">Username</label>
+        <div class="control has-icons-left">
+          <input class="input" id="login-username" type="text" placeholder="username">
+          <span class="icon is-small is-left">
+            <i class="fas fa-user"></i>
+          </span>
+        </div>
+      </div>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+      <div class="field">
+        <label class="label">Password</label>
+        <div class="control has-icons-left">
+          <input class="input" id="login-password" type="password" placeholder="password">
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
 
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
+      <button class="form-button" id="login-button">Log In</button>
     </form>
-  </div>
 </div>
 
-<script src="./js/login.js"></script>
+<div class="form-wrapper">
+  <h3>Sign Up</h3>
+  <form>
+    <div class="field">
+      <label class="label">Create Username</label>
+      <div class="control has-icons-left">
+        <input class="input" type="text" id="signup-username" placeholder="create username">
+        <span class="icon is-small is-left">
+          <i class="fas fa-user"></i>
+        </span>
+      </div>
+    </div>
+
+    <div class="field">
+      <label class="label">Create Password</label>
+      <div class="control has-icons-left">
+        <input class="input" type="password" id="signup-password" placeholder="create password">
+        <span class="icon is-small is-left">
+          <i class="fas fa-lock"></i>
+        </span>
+      </div>
+    </div>
+
+    <button class="form-button" id="signup-button">Sign Up</button>
+  </form>
+</div>
