--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -246,9 +246,8 @@ form {
   }
 
   nav {
-    width: 258px;
     margin-right: 0;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 }
 
