--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
         <a href="" id="logout-link">Log Out</a>
         {{/if}}
         {{#unless loggedIn}}
-        <a href="" id="login-link">Log In</a>
+        <a href="/login" id="login-link">Log In</a>
         {{/unless}}
       </nav>
     </div>
@@ -48,68 +48,6 @@
   <main>
 
     {{{ body }}}
-
-    <div id="login-modal" class="modal">
-      <div class="modal-background"></div>
-
-      <div class="modal-content">
-        <div class="box">
-          <h3>Log In</h3>
-          <form>
-            <div class="field">
-              <label class="label">Username</label>
-              <div class="control has-icons-left">
-                <input class="input" id="login-username" type="text" placeholder="username">
-                <span class="icon is-small is-left">
-                  <i class="fas fa-user"></i>
-                </span>
-              </div>
-            </div>
-
-            <div class="field">
-              <label class="label">Password</label>
-              <div class="control has-icons-left">
-                <input class="input" id="login-password" type="password" placeholder="password">
-                <span class="icon is-small is-left">
-                  <i class="fas fa-lock"></i>
-                </span>
-              </div>
-            </div>
-
-            <button class="form-button" id="login-button">Log In</button>
-          </form>
-        </div>
-
-        <div class="box">
-          <h3>Sign Up</h3>
-          <form>
-            <div class="field">
-              <label class="label">Create Username</label>
-              <div class="control has-icons-left">
-                <input class="input" type="text" id="signup-username" placeholder="create username">
-                <span class="icon is-small is-left">
-                  <i class="fas fa-user"></i>
-                </span>
-              </div>
-            </div>
-
-            <div class="field">
-              <label class="label">Create Password</label>
-              <div class="control has-icons-left">
-                <input class="input" type="password" id="signup-password" placeholder="create password">
-                <span class="icon is-small is-left">
-                  <i class="fas fa-lock"></i>
-                </span>
-              </div>
-            </div>
-
-            <button class="form-button" id="signup-button">Sign Up</button>
-          </form>
-        </div>
-      </div>
-
-      <button class="modal-close is-large" aria-label="close"></button>
-    </div>
 
   </main>
 
