--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,38 @@
- <div class="form-wrapper">
-  <h3>Log In</h3>
+ <div class="form-container">
+  <div class="form-wrapper">
+    <h3>Log In</h3>
+      <form>
+        <div class="field">
+          <label class="label">Username</label>
+          <div class="control has-icons-left">
+            <input class="input" id="login-username" type="text" placeholder="username">
+            <span class="icon is-small is-left">
+              <i class="fas fa-user"></i>
+            </span>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Password</label>
+          <div class="control has-icons-left">
+            <input class="input" id="login-password" type="password" placeholder="password">
+            <span class="icon is-small is-left">
+              <i class="fas fa-lock"></i>
+            </span>
+          </div>
+        </div>
+
+        <button class="form-button" id="login-button">Log In</button>
+      </form>
+  </div>
+
+  <div class="form-wrapper">
+    <h3>Sign Up</h3>
     <form>
       <div class="field">
-        <label class="label">Username</label>
+        <label class="label">Create Username</label>
         <div class="control has-icons-left">
-          <input class="input" id="login-username" type="text" placeholder="username">
+          <input class="input" type="text" id="signup-username" placeholder="create username">
           <span class="icon is-small is-left">
             <i class="fas fa-user"></i>
           </span>
@@ -12,42 +40,16 @@
       </div>
 
       <div class="field">
-        <label class="label">Password</label>
+        <label class="label">Create Password</label>
         <div class="control has-icons-left">
-          <input class="input" id="login-password" type="password" placeholder="password">
+          <input class="input" type="password" id="signup-password" placeholder="create password">
           <span class="icon is-small is-left">
             <i class="fas fa-lock"></i>
           </span>
         </div>
       </div>
 
-      <button class="form-button" id="login-button">Log In</button>
+      <button class="form-button" id="signup-button">Sign Up</button>
     </form>
-</div>
-
-<div class="form-wrapper">
-  <h3>Sign Up</h3>
-  <form>
-    <div class="field">
-      <label class="label">Create Username</label>
-      <div class="control has-icons-left">
-        <input class="input" type="text" id="signup-username" placeholder="create username">
-        <span class="icon is-small is-left">
-          <i class="fas fa-user"></i>
-        </span>
-      </div>
-    </div>
-
-    <div class="field">
-      <label class="label">Create Password</label>
-      <div class="control has-icons-left">
-        <input class="input" type="password" id="signup-password" placeholder="create password">
-        <span class="icon is-small is-left">
-          <i class="fas fa-lock"></i>
-        </span>
-      </div>
-    </div>
-
-    <button class="form-button" id="signup-button">Sign Up</button>
-  </form>
+  </div>
 </div>
