--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,7 +17,8 @@ main,
 .card-left,
 .card-right,
 .date-container,
-.form-container {
+.form-container,
+.dashboard-header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -180,6 +181,16 @@ form {
 
 .form-wrapper {
   width: 48%;
+}
+
+.dashboard-header {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.dashboard-header button {
+  height: 50px;
+  width: 200px;
 }
 
 .input {
