--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,20 +5,22 @@
 {{#if posts}}
 {{#each posts}}      
     <!-- BLOG CARD -->
-    <div class="card-holder">
-      <div class="card-left">
-        <div class="title-container">
-          <h3 class="title">{{title}}</h3>
+    <a href="/post/{{id}}">
+      <div class="card-holder">
+        <div class="card-left">
+          <div class="title-container">
+            <h3 class="title">{{title}}</h3>
+          </div>
+          <div class="date-container">
+            <div>{{date_created}}</div>
+          </div>
         </div>
-        <div class="date-container">
-          <div>{{date_created}}</div>
+        <div class="card-right">
+          <button class="dashboard-button">View Post</button>
+          <button class="dashboard-button">Edit Post</button>
         </div>
       </div>
-      <div class="card-right">
-        <button class="dashboard-button">View Post</button>
-        <button class="dashboard-button">Edit Post</button>
-      </div>
-    </div>
+    </a>
 {{/each}}
 {{/if}}
 
