--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <h1>Homepage</h1>
 {{#each posts}}      
     <!-- BLOG CARD -->
-    <a href="/post/{{id}}" class="card-holder-link">
+    <a href="/{{id}}" class="card-holder-link">
       <div class="card-holder home-card" value="{{id}}">
         <div class="card-left">
           <div class="title-container">
