res.render('blog-post') continues to throw err

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,8 @@
 <h1>Homepage</h1>
 {{#each posts}}      
     <!-- BLOG CARD -->
-    <a href="/{{id}}" class="card-holder-link">
-      <div class="card-holder home-card" value="{{id}}">
+    <a href="/blog/{{id}}" class="card-holder-link">
+      <div class="card-holder home-card">
         <div class="card-left">
           <div class="title-container">
             <h3 class="title">{{title}}</h3>
