--- a/views/update-post.handlebars
+++ b/views/update-post.handlebars
@@ -1,9 +1,10 @@
-<form class="write-blog-form">
+  <form class="write-blog-form">
     <input type="hidden" id="hidden-user-id" value="{{userId}}">
+    <input type="hidden" id="hidden-post-id" value="{{postId}}">
     <div class="field">
-      <label class="label">Title</label>
+      <label class="label">Titlehahaha</label>
       <div class="control">
-        <input class="input" id="title-input" type="text" placeholder="Title">
+        <input class="input" id="title-input" type="text" placeholder="{{post.title}}" value="{{post.title}}">
       </div>
     </div>
 
@@ -14,5 +15,5 @@
       </div>
     </div>
 
-    <button class="form-button" id="post-blog-button">Post Blog</button>
+    <button class="form-button" id="update-blog-button">Update Blog</button>
   </form>
