handlebars bug is resolved

--- a/views/blog-post.handlebars
+++ b/views/blog-post.handlebars
@@ -14,7 +14,7 @@
       <h3>Comments</h3>
       <button class="form-button">Add a comment</button>
     </div>
-    {{#each commentsData}}
+    {{#each comments}}
     <div>
       <h4>{{user.username}} ({{date_created}})</h4>
       <p>{{content}}</p>
