--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./assets/css/brand.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/brand.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 
   <title>UNDEFINED OPINIONS</title>
 </head>
@@ -25,7 +25,7 @@
   <header>
     <div class="header-contents">
       <div class="header-branding">
-        <img src="./assets/images/err.png" width="70px" height="70px"/>
+        <img src="/assets/images/err.png" width="70px" height="70px"/>
         <div class="branding-text">
           <h2>UNDEFINED</h2>
           <h2>OPINIONS</h2>
@@ -60,7 +60,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
   <!-- JS -->
-  <script src="./assets/js/script.js"></script>  
+  <script src="/assets/js/script.js"></script>  
   
 </body>
 </html>
