--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,22 +7,22 @@
 {{#if posts}}
 {{#each posts as |post|}}      
     <!-- BLOG CARD -->
-    <a href="/view/{{post.id}}" class="card-holder-link">
-      <div class="card-holder">
-        <div class="card-left">
-          <div class="title-container">
-            <h3 class="title">{{post.title}}</h3>
-          </div>
-          <div class="date-container">
-            <div>{{post.date_created}}</div>
-          </div>
+    <div class="card-holder">
+      <div class="card-left">
+        <div class="title-container">
+          <h3 class="title">{{post.title}}</h3>
         </div>
-        <div class="card-right">
-          <button class="dashboard-button dashboard-edit-button">Edit Post</button>
-          <button class="dashboard-button dashboard-delete-button">Delete Post</button>
+        <div class="date-container">
+          <div>{{post.date_created}}</div>
         </div>
       </div>
-    </a>
+      <div class="card-right">
+        <a href="/view/{{post.id}}" class="dashboard-link">
+          <button class="dashboard-button dashboard-view-button">View Post</button>
+        </a>
+        <button class="dashboard-button dashboard-edit-button">Edit Post</button>
+      </div>
+    </div>
 {{/each}}
 {{/if}}
 
