update post feature

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -20,7 +20,9 @@
         <a href="/view/{{post.id}}" class="dashboard-link">
           <button class="dashboard-button dashboard-view-button">View Post</button>
         </a>
-        <button class="dashboard-button dashboard-edit-button">Edit Post</button>
+        <a href="/write/{{post.id}}" class="dashboard-link">
+          <button class="dashboard-button dashboard-edit-button">Edit Post</button>
+        </a>
       </div>
     </div>
 {{/each}}
