--- a/views/write-post.handlebars
+++ b/views/write-post.handlebars
@@ -1,4 +1,5 @@
-<form class="write-blog-form">
+  {{#unless post}}
+  <form class="write-blog-form">
     <input type="hidden" id="hidden-user-id" value="{{userId}}">
     <div class="field">
       <label class="label">Title</label>
@@ -16,3 +17,26 @@
 
     <button class="form-button" id="post-blog-button">Post Blog</button>
   </form>
+  {{/unless}}
+
+  {{#if post}}
+  <form class="write-blog-form">
+    <input type="hidden" id="hidden-user-id" value="{{userId}}">
+    <input type="hidden" id="hidden-post-id" value="{{postId}}">
+    <div class="field">
+      <label class="label">Title</label>
+      <div class="control">
+        <input class="input" id="title-input" type="text" value="{{post.title}}">
+      </div>
+    </div>
+
+    <div class="field">
+      <label class="label">Blog Content</label>
+      <div class="control">
+        <textarea class="textarea" id="body-input" type="text" value="{{post.content}}">{{post.content}}</textarea>
+      </div>
+    </div>
+
+    <button class="form-button" id="update-blog-button">Update Blog</button>
+  </form>
+  {{/if}}
