--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -209,7 +209,7 @@ form {
   width: 100%;
 }
 
-.dashboard-view-button {
+.dashboard-button {
   width: 80%;
   margin: 0 10% 0 10%;
 }
@@ -255,7 +255,8 @@ form {
   width: 100%;
 }
 
-#post-blog-button {
+#post-blog-button,
+#update-blog-button {
   height: 50px;
   width: 300px;
 }
@@ -289,9 +290,13 @@ form {
     justify-content: space-evenly;
   }
 
+  .dashboard-link {
+    width: 50%;
+  }
+
   .dashboard-button {
     width: 90%;
-    margin: 10px 0 10px 0;
+    margin: 10px 5% 10px 5%;
   }
 
   .card-right h4 {
