--- a/views/write-post.handlebars
+++ b/views/write-post.handlebars
@@ -38,5 +38,6 @@
     </div>
 
     <button class="form-button" id="update-blog-button">Update Blog</button>
+    <button class="form-button" id="delete-blog-button" value="{{postId}}">Delete Blog</button>
   </form>
   {{/if}}
