application fulfills all requirements

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,12 @@
   <link rel="stylesheet" href="/assets/css/brand.css">
   <link rel="stylesheet" href="/assets/css/style.css">
 
+
+  <!-- favicon -->
+  <link rel="icon" href="/assets/images/favicon.ico">
+  
   <title>UNDEFINED OPINIONS</title>
+
 </head>
 
 <body>
