--- a/views/blog-post.handlebars
+++ b/views/blog-post.handlebars
@@ -12,13 +12,13 @@
   <div class="blog-comments">
     <div class="comments-header">
       <h3>Comments</h3>
-      <button class="form-button">Add a comment</button>
+      <button class="form-button" id="add-comment-button" value="{{post.id}}">Add a comment</button>
     </div>
     {{#each comments}}
-    <div>
+    <div class="comment-div">
       <h4>{{user.username}} ({{date_created}})</h4>
       <p>{{content}}</p>
-    {{/each}}
     </div>
+    {{/each}}
   </div>
 </div>
