--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+ {{!-- LOGIN FORM --}}
  <div class="form-container">
   <div class="form-wrapper">
     <h3>Log In</h3>
@@ -26,6 +27,7 @@
       </form>
   </div>
 
+{{!-- SIGNUP FORM --}}
   <div class="form-wrapper">
     <h3>Sign Up</h3>
     <form>
